# ttennis_ladder

./: .gitignore  .resting.py.swp  3wayadder.html  about.html  admin.css  admin.html  admin.js  convertjsontopickle.py  footy.css  footy.js  footy.js~  index.html  index.html~  index2.html  journal.db  journal.db.footy  journal.db.once  journal.db.twice  journal.json  log  player.html  player.js  pyproject.toml  readme.txt  records.html  resting.py  resting.py~  start
css/: 3way.css  3wayadder.css  expected_win.css  footy.css  player.css  records.css  results.css
scripts/: 3wayadder.js  admin.js  footy.js  glicko2.js  player.js  records.js
