[tool.poetry]
name = "ttennis_ladder"
version = "0.1.0"
description = ""
authors = ["Geoff Thomas <admiralgt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cherrypy = "^18.5.0"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
